featured articles headline word wrap fix, ref https://github.com/mozilla/sumo-project/issues/185

--- a/kitsune/sumo/static/sumo/scss/components/_card.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_card.scss
@@ -86,6 +86,11 @@
       margin-bottom: 32px;
       padding-bottom: 32px;
       border-bottom: 1px solid var(--color-heading);
+
+      a {
+      	white-space: pre-line;
+      	word-wrap: break-word;
+      }
     }
 
     .card--desc {
